--- a/public/manifest.json
+++ b/public/manifest.json
@@ -7,7 +7,7 @@
       "type": "image/x-icon"
     }
   ],
-  "start_url": "./index.html",
+  "start_url": "./index.html/",
   "display": "standalone",
   "theme_color": "#2C3182",
   "background_color": "#2C3182"
