--- a/package.json
+++ b/package.json
@@ -3,18 +3,27 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "apollo-boost": "^0.1.23",
     "draft-js": "^0.10.5",
     "draft-js-export-html": "^1.2.0",
+    "draft-js-image-plugin": "^2.0.6",
+    "draft-js-plugins-editor": "^2.1.1",
+    "draft-js-side-toolbar-plugin": "^3.0.1",
+    "graphql": "^14.0.2",
     "material-ui": "^0.20.0",
+    "medium-draft": "^0.5.9",
     "react": "^16.2.0",
+    "react-apollo": "^2.3.3",
     "react-dom": "^16.2.0",
+    "react-draft-wysiwyg": "^1.12.13",
     "react-html-parser": "^2.0.2",
     "react-redux": "^5.0.7",
     "react-router": "^4.2.0",
     "react-router-dom": "^4.2.2",
     "react-scripts": "1.0.17",
     "redux": "^4.0.0",
-    "redux-thunk": "^2.2.0"
+    "redux-thunk": "^2.2.0",
+    "styled-components": "^4.1.3"
   },
   "scripts": {
     "start": "react-scripts start",
