--- a/package.json
+++ b/package.json
@@ -12,15 +12,15 @@
     "graphql": "^14.0.2",
     "material-ui": "^0.20.0",
     "medium-draft": "^0.5.9",
-    "react": "^16.2.0",
+    "react": "^16.6.3",
     "react-apollo": "^2.3.3",
-    "react-dom": "^16.2.0",
+    "react-dom": "^16.6.3",
     "react-draft-wysiwyg": "^1.12.13",
     "react-html-parser": "^2.0.2",
     "react-redux": "^5.0.7",
     "react-router": "^4.2.0",
-    "react-router-dom": "^4.2.2",
-    "react-scripts": "1.0.17",
+    "react-router-dom": "^4.3.1",
+    "react-scripts": "2.1.1",
     "redux": "^4.0.0",
     "redux-thunk": "^2.2.0",
     "styled-components": "^4.1.3"
@@ -30,5 +30,11 @@
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
-  }
+  },
+  "browserslist": [
+    ">0.2%",
+    "not dead",
+    "not ie <= 11",
+    "not op_mini all"
+  ]
 }
